Fixed layout issue of the Search in all folders control

--- a/styles/desktop/dropdown.less
+++ b/styles/desktop/dropdown.less
@@ -18,7 +18,7 @@
 	z-index: 3002 !important;
     width: 100%;
 
-	.expand & {
+	.expand > & {
 		.opacity(1);
 
 		display: block;
